# BillParser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codecov.yml
billparser/: cli.py  config.py  models.py  pipeline.py  security.py  server.py
billparser/parsers/: ds_parsers.py  groq_parsers.py  helpers.py  manager.py  pp_parsers.py  qianfan_ocr_parser.py
config/: .gitignore  assets.example.yaml  categories.example.yaml  parsers.example.yaml  pipelines.example.yaml  settings.example.yaml
src/billparser/: cli.py  config.py  models.py  pipeline.py  security.py
src/billparser/parsers/: base.py  ds_parsers.py  helpers.py  manage.py  manager.py  pp_parsers.py  qianfan_ocr_parser.py
tests/: test_ds_parsers.py  test_groq_parsers.py  test_pipeline.py  test_pp_parsers.py  test_qianfan_ocr_parser.py  test_security.py
tests/config/: categories.yaml  parsers.yaml  pipelines.yaml  settings.yaml
