[project]
name = "BillParser"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "zhouxin", email = "zhou.xin@mail.ustc.edu.cn" }]
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "dynaconf[yaml]>=3.2.12",
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "openai>=2.6.1",
    "requests>=2.32.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "Apache License 2.0" }


[tool.pdm]
distribution = true

[tool.ruff]
target-version = "py312"
line-length = 120


[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF", "N"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = ["pytest-cov>=7.0.0", "pytest-asyncio>=1.2.0", "pre-commit>=4.3.0"]
